# newmat

./: ChangeLog  bandmat.cpp  cholesky.cpp  configure.in  evalue.cpp  example.dsp  fft.cpp  hholder.cpp  include.h  jacobi.cpp  myexcept.cpp  newmat.dsp  newmat.dsw  newmat.h  newmat2.cpp  newmat3.cpp  newmat4.cpp  newmat5.cpp  newmat6.cpp  newmat7.cpp  newmat8.cpp  newmat9.cpp  newmatex.cpp  newmatnl.cpp  sl_ex.cpp  solution.cpp  sort.cpp  submat.cpp  svd.cpp  tmt.cpp  tmt1.cpp  tmt2.cpp  tmt3.cpp  tmt4.cpp  tmt5.cpp  tmt6.cpp  tmt7.cpp  tmt8.cpp  tmt9.cpp  tmta.cpp  (+11 more)
debian/: Makefile.am  README.Debian  bootstrap  changelog  control  copyright  docs  libnewmat10-dev.examples  libnewmat10-dev.files  libnewmat10-dev.links  rules  watch
debian/patches/: newmat-1.10.4-config.diff  newmat-1.10.4-libtool.diff  newmat-1.10.4-msvc.diff  series
