#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT(newmat, 1.10.2, rzr@users.sf.net)
AM_INIT_AUTOMAKE(libnewmat, 1.10.2)

AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])
# AC_CONFIG_FILES([Makefile]) 

AC_LANG_CPLUSPLUS
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADER( [ float.h , cstdlib , setjmp.h , limits ] )

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_CHECK_FUNCS([floor pow sqrt])
AC_OUTPUT( [Makefile] )


#eof "Id: configure.in -- pcoval $"
